# opcua-server

./: .gitmodules  CMakeLists.txt
src/: server.c
